added js functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Random Quotes Generator</title>
   </head>
   <body>
@@ -15,11 +15,13 @@
           ipsum voluptas corrupti deserunt perferendis doloribus officiis dicta
           voluptatum et!
         </div>
-        <div class="author"><span>-</span> random author</div>
+        <div class="author"> - random author</div>
       </div>
       <div class="button-container">
         <button class="btn generator">Generate Quote</button>
       </div>
     </section>
+
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
