--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <section class="outer-container">
       <div class="quote-container">
         <div class="quote">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At nobis
-          ullam, quos libero iure eos voluptatum in laudantium? Natus dolores
-          ipsum voluptas corrupti deserunt perferendis doloribus officiis dicta
-          voluptatum et!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, debitis?
         </div>
-        <div class="author"> - random author</div>
+        <div class="author">-Anonymous</div>
       </div>
       <div class="button-container">
         <button class="btn generator">Generate Quote</button>
